--- a/style.css
+++ b/style.css
@@ -1,44 +1,61 @@
 body{
   font-family: Arial, Helvetica, sans-serif2;
-  margin: 5% 5%;
+  margin: 5% 30%;
   background-color: rgb(0, 0, 0);
   color: white;
   display: grid;
   line-height: 150%;
 }
+
 h1{
   text-align: center;
 }
-img {
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 100%;
   border: 3px solid cornflowerblue;
   width: 150px;
-  height: 150px; 
+  height: 150px;
 }
+
 p{
   text-align: center;
 }
+
 a{
   white-space: nowrap;
   color: green;
   font-style: normal;
   text-decoration: none;
+  transition: color 1s;
 }
+
+a:hover, a:focus{
+  color: cornflowerblue;
+}
+
 b{
-  margin:0 0 0 6.7%;
+  margin:0 0 0 5%;
 }
+
 mark.um{
   color:cornflowerblue;
   background: none;
 }
+
 mark.dois{
   color:cornflowerblue;
   background: none;
 }
+
 mark.três{
   color:purple;
   background: none;
 }
+
 .center{
   display: block;
   margin-left: auto;
