--- a/exemplo dia 1/assets/css/style.css
+++ b/exemplo dia 1/assets/css/style.css
@@ -7,7 +7,7 @@ body{
   line-height: 150%;
 }
 
-h1{
+h1, p{
   text-align: center;
 }
 
@@ -19,10 +19,6 @@ img{
   border: 3px solid cornflowerblue;
   width: 150px;
   height: 150px;
-}
-
-p{
-  text-align: center;
 }
 
 a{
