--- a/exemplo dia 3/assets/css/style.css
+++ b/exemplo dia 3/assets/css/style.css
@@ -56,3 +56,20 @@ i {
     margin: 0 auto auto auto;
     font-size: 1.3rem;
 }
+
+mark.inputs{
+    background: none;
+    margin: 0 0 0 0;
+    align-items: center;
+}
+
+.button{
+    margin: 0 0 0 0;
+    align-items: center;
+}
+
+div{
+    background: none;
+    margin: 0 0 0 0;
+    align-items: center;
+}
